added about css & html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
 <head>
 <title>portfolio</title>
 <link rel="style" href="common.css"/>
+<link rel="style" href="header.css"/>
+<link rel="style" href="about.css"/>
 </head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#About">About</a></li>
+				<li><a href="#Articles">Articles</a></li>
+				<li><a href="#Projects">Projects</a></li>
+				<li><a href="#Presentation">Presentations</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<section id="About">
+		<div>
+			<img src="img/ash.jpeg"/>
+		</div>
+		<h2>Ashish Bharti</h2>
+		<h4>Learning Software Development</h4>
+		<p>I'm Ashish software developer and intern at Torqbit in Dhanbad. We learn how to create Software.</p>
+		<ul>
+			<img src="img/Youtube.png"/>
+			<img src="img/GitHub.png"/>
+			<img src="img/Linkedin.png"/>
+			<img src="img/Instagram.png"/>
+		</ul>
+	</section>
 </body>
 </html>
 
