--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="style" href="common.css"/>
 <link rel="style" href="header.css"/>
 <link rel="style" href="about.css"/>
+<link rel="style" href="articles.css"/>
 </head>
 <body>
 	<header>
@@ -34,6 +35,38 @@
 			<img src="img/Linkedin.png"/>
 			<img src="img/Instagram.png"/>
 		</ul>
+	</section>
+
+	<section id="Articles">
+		<article>
+			<h2>Articles</h2>
+				<article>
+					<div>December12, 2023</div>
+					<h2>Clean Navigation using HTML5 & CSS</h2>
+					<P>
+               				 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore molestiae, quas quaerat labore magni quos perferendis dolore rem dolorem eaque quo modi accusantium laboriosam nobis pariatur officia, cupiditate, illum est fugiat necessitatibus architecto placeat at. Molestiae eligendi doloribus adipisci dicta.
+           				 </P>
+					<a href=" ">Red More</a>
+				</article>
+				
+				<article>
+					<div>December12, 2023</div>
+					<h2>Clean Navigation using HTML5 & CSS</h2>
+					<P>
+               				 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore molestiae, quas quaerat labore magni quos perferendis dolore rem dolorem eaque quo modi accusantium laboriosam nobis pariatur officia, cupiditate, illum est fugiat necessitatibus architecto placeat at. Molestiae eligendi doloribus adipisci dicta.
+           				 </P>
+					<a href=" ">Red More</a>
+				</article>
+
+				<article>
+					<div>December12, 2023</div>
+					<h2>Clean Navigation using HTML5 & CSS</h2>
+					<P>
+               				 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore molestiae, quas quaerat labore magni quos perferendis dolore rem dolorem eaque quo modi accusantium laboriosam nobis pariatur officia, cupiditate, illum est fugiat necessitatibus architecto placeat at. Molestiae eligendi doloribus adipisci dicta.
+           				 </P>
+					<a href=" ">Red More</a>
+				</article>
+		</article>
 	</section>
 </body>
 </html>
