Added projects css & html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,32 @@
 				</article>
 		</article>
 	</section>
+
+		<section id="Projects">	
+		<h2>Open Source Projects</h2>
+			<div>
+				<div>
+					<span>01</span>
+					<img src="img/vegking.png"/>
+					<p>Veg King</p>
+				</div>
+				<div>
+					<span>02</span>
+					<img src="img/carstats.png"/>
+					<p>Car Stats</p>	
+				</div>
+				<div>
+					<span>03</span>
+					<img src="img/bloguikit.png"/>
+					<p>Blog Ui Kit</p>
+				</div>
+				<div>
+					<span>04</span>
+					<img src="img/webmonitor.png"/>
+					<p>Web Monitor</p>
+				</div>
+			</div>
+	</section>
 </body>
 </html>
 
