Added  presentation & html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="style" href="header.css"/>
 <link rel="style" href="about.css"/>
 <link rel="style" href="articles.css"/>
+<link rel="style" href="projects.css"/>
+<link rel="style" href="presentation.css"/>
 </head>
 <body>
 	<header>
@@ -69,7 +71,7 @@
 		</article>
 	</section>
 
-		<section id="Projects">	
+	<section id="Projects">	
 		<h2>Open Source Projects</h2>
 			<div>
 				<div>
@@ -94,6 +96,34 @@
 				</div>
 			</div>
 	</section>
+
+	<section id="Presentation">
+       		 <h2>Presentations</h2>
+       			 <div>
+            			<div>
+           			 	<div class="presentation-video">
+              				  <img src="img/presentation-01.png" />
+               					 <img src="img/play-button.png" />
+           			 	</div>
+            				<div>
+                			<h4>A talk on Optimizing CSS</h4>
+                			<p>November 13, 2023</p>
+            				</div>
+       			 	</div>
+        			<div>
+           			 <div class="presentation-video">
+                			<img src="img/presentation-02.png" />
+               				 <img src="img/play-button.png" />
+            			</div>
+            			<div>
+                		<h4>A talk on Optimizing CSS</h4>
+               			 <p>November 13, 2023</p>
+            			</div>
+        			</div>
+   		 </div>
+    </section>	
+	<hr/>
+
 </body>
 </html>
 
