Added mobile screen about css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="style" href="articles.css"/>
 <link rel="style" href="projects.css"/>
 <link rel="style" href="presentation.css"/>
+<link rel="style" href="footer.css"/>
 </head>
 <body>
 	<header>
@@ -123,7 +124,19 @@
    		 </div>
     </section>	
 	<hr/>
-
+	<footer>
+		<div>
+			<ul>
+				<li><a href="#About">About</a></li>
+				<li><a href="#Articles">Articles</a></li>
+				<li><a href="#Projects">Projects</a></li>
+				<li><a href="#Presentations">Presentations</a></li>
+			</ul>
+		</div>
+		<div>
+			<h4>© Copyright Ashish Bharti.All right reserved </h4>
+		</div>
+	</footer>
 </body>
 </html>
 
